[workspace]
resolver = "2"
members = [
    "analogize",
    "armnod",
    "arrrg",
    "arrrg_derive",
    "biometrics",
    "biometrics_pb",
    "biometrics_sys",
    "bloomcalc",
    "buffertk",
    "busyrpc",
    "derive_util",
    "guacamole",
    "indicio",
    "keyvalint",
    "keyvalint_bench",
    "listfree",
    "lsmtk",
    "macarunes",
    "mani",
    "meta",
    "minimal_signals",
    "one_two_eight",
    "paxos_pb",
    "protoql",
    "prototk",
    "prototk_derive",
    "rc_conf",
    "rpc_pb",
    "rustrc",
    "saros",
    "scrunch",
    "setsum",
    "shvar",
    "skipfree",
    "sig_fig_histogram",
    "split_channel",
    "sst",
    "statslicer",
    "stdioredirect",
    "symphonize",
    "sync42",
    "tag_index",
    "tatl",
    "texttale",
    "tiny_lfu",
    "tuple_key",
    "tuple_key_derive",
    "unix_sock",
    "utf8path",
    "utilz",
    "zerror",
    "zerror_derive",
    "zerror_core",
]

[profile.release]
debug = true
lto = true
opt-level = 2
panic = "abort"

[profile.test]
debug = true
opt-level = 2
