[workspace]
resolver = "2"
members = [
    "analogize",
    "armnod",
    "arrrg",
    "arrrg_derive",
    "biometrics",
    "biometrics_pb",
    "biometrics_prometheus",
    "biometrics_sys",
    "bloomcalc",
    "buffertk",
    "busyrpc",
    "busyrpc_service_discovery",
    "derive_util",
    "guacamole",
    "handled",
    "indicio",
    "k8src",
    "listfree",
    "lsmtk",
    "macarunes",
    "mani",
    "meta",
    "minimal_signals",
    "one_two_eight",
    "paxos_pb",
    "protoql",
    "prototk",
    "prototk_derive",
    "rc_conf",
    "rc_conf/demo_crate",
    "rpc_pb",
    "rustrc",
    "saros",
    "scrunch",
    "setsum",
    "shvar",
    "skipfree",
    "sig_fig_histogram",
    "split_channel",
    "sst",
    "statslicer",
    "stdioredirect",
    "symphonize",
    "sync42",
    "tag_index",
    "tatl",
    "texttale",
    "tiny_lfu",
    "tuple_key",
    "tuple_key_derive",
    "tuple_routing",
    "unix_sock",
    "utf8path",
    "utilz",
    "zerror",
    "zerror_derive",
    "zerror_core",
    "zerror_full",
]

[profile.dev]
panic = "abort"

[profile.release]
debug = true
lto = true
opt-level = 2
panic = "abort"

[profile.test]
debug = true
opt-level = 2
