[package]
name = "analogize"
version = "0.6.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "analogize is a log analyzer"
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = []

[dependencies]
chrono = "0.4"
getopts = "0.2"
libc = "0.2"
nom = "7.1"
rustyline = "11.0"

arrrg = { path = "../arrrg", version = "0.7" }
arrrg_derive = { path = "../arrrg_derive", version = "0.7" }
buffertk = { path = "../buffertk", version = "0.12" }
guacamole = { path = "../guacamole", version = "0.11" }
indicio = { path = "../indicio", version = "0.11", features = ["prototk"] }
mani = { path = "../mani", version = "0.9" }
prototk = { path = "../prototk", version = "0.12" }
prototk_derive = { path = "../prototk_derive", version = "0.12" }
scrunch = { path = "../scrunch", version = "0.8" }
zerror = { path = "../zerror", version = "0.7" }
zerror_core = { path = "../zerror_core", version = "0.12" }
zerror_derive = { path = "../zerror_derive", version = "0.6" }

[dev-dependencies]
proptest = "1.0"

[[bin]]
name = "analogize"
path = "src/bin/analogize.rs"
required-features=["binaries"]
