[package]
name = "analogize"
version = "0.12.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "analogize is a log analyzer"
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = []

[dependencies]
chrono = { workspace = true }
getopts = { workspace = true }
libc = { workspace = true }
nom = { workspace = true }
rustyline = { workspace = true }

arrrg = { workspace = true }
arrrg_derive = { workspace = true }
buffertk = { workspace = true }
guacamole = { workspace = true }
indicio = { workspace = true, features = ["prototk"] }
mani = { workspace = true }
prototk = { workspace = true }
prototk_derive = { workspace = true }
scrunch = { workspace = true }
zerror = { workspace = true }
zerror_core = { workspace = true }
zerror_derive = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
[[bin]]
name = "analogize"
path = "src/bin/analogize.rs"
required-features=["binaries"]
