[package]
name = "armnod"
version = "0.10.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "Armnod provides a random string generator."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = ["command_line"]
command_line = ["dep:arrrg", "dep:arrrg_derive", "dep:getopts"]

[dependencies]
getopts = { version = "0.2", optional = true }

arrrg = { path = "../arrrg", version = "0.7", optional = true }
arrrg_derive = { path = "../arrrg_derive", version = "0.8", optional = true }
guacamole = { path = "../guacamole", version = "0.13" }

[[bin]]
name = "armnod"
path = "src/bin/armnod.rs"
required-features=["binaries"]
