[package]
name = "armnod"
version = "0.13.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "Armnod provides a random string generator."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = ["command_line"]
command_line = ["dep:arrrg", "dep:arrrg_derive", "dep:getopts"]

[dependencies]
getopts = { workspace = true, optional = true }

arrrg = { workspace = true, optional = true }
arrrg_derive = { workspace = true, optional = true }
guacamole = { workspace = true }

[[bin]]
name = "armnod"
path = "src/bin/armnod.rs"
required-features=["binaries"]
