[package]
name = "arrrg"
version = "0.4.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "arrrg provides a wrapper around the getops library for stable commandline parsing."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[dependencies]
getopts = "0.2"

arrrg_derive = { path = "../arrrg_derive", version = "0.5" }
