[package]
name = "arrrg"
version = "0.8.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "arrrg provides a wrapper around the getops library for stable commandline parsing."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[dependencies]
getopts = { workspace = true }

arrrg_derive = { workspace = true }
