[package]
name = "arrrg_derive"
version = "0.1.1"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "Derive macro for arrrg::CommandLine"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

derive_util = { path = "../derive_util", version = "0.2" }
