[package]
name = "arrrg_derive"
version = "0.8.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "Derive macro for arrrg::CommandLine"
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

derive_util = { workspace = true }
