[package]
name = "biometrics_pb"
version = "0.10.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "biometrics_pb provides protocol buffers corresponding to biometric readings."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[dependencies]
biometrics = { path = "../biometrics", version = "0.12" }
buffertk = { path = "../buffertk", version = "0.13" }
one_two_eight = { path = "../one_two_eight", version = "0.9" }
prototk = { path = "../prototk", version = "0.13" }
prototk_derive = { path = "../prototk_derive", version = "0.13" }
tuple_key = { path = "../tuple_key", version = "0.12" }
tuple_key_derive = { path = "../tuple_key_derive", version = "0.11" }
