[package]
name = "biometrics_pb"
version = "0.11.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "biometrics_pb provides protocol buffers corresponding to biometric readings."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[dependencies]
biometrics = { workspace = true }
buffertk = { workspace = true }
one_two_eight = { workspace = true }
prototk = { workspace = true }
prototk_derive = { workspace = true }
tuple_key = { workspace = true }
tuple_key_derive = { workspace = true }
