[package]
name = "biometrics_pb"
version = "0.15.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "biometrics_pb provides protocol buffers corresponding to biometric readings."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[dependencies]
biometrics = { workspace = true }
buffertk = { workspace = true }
one_two_eight = { workspace = true }
prototk = { workspace = true }
prototk_derive = { workspace = true }
sig_fig_histogram = { workspace = true }
tuple_key = { workspace = true }
tuple_key_derive = { workspace = true }
