[package]
name = "biometrics_prometheus"
version = "0.9.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "biometrics_prometheus provides a prometheus-compatible exporter of biometrics."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[dependencies]
libc = "0.2"

biometrics = { path = "../biometrics", version = "0.12" }
utf8path = { path = "../utf8path", version = "0.9" }

[dev-dependencies]
biometrics_sys = { path = "../biometrics_sys", version = "0.7" }
