[package]
name = "biometrics_prometheus"
version = "0.10.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "biometrics_prometheus provides a prometheus-compatible exporter of biometrics."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[dependencies]
libc = { workspace = true }

biometrics = { workspace = true }
utf8path = { workspace = true }

[dev-dependencies]
biometrics_sys = { workspace = true }
