[package]
name = "biometrics_sys"
version = "0.8.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "biometrics_sys provides system stats measured from within the process"
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = []

[dependencies]
libc = { workspace = true }

biometrics = { workspace = true }
