[package]
name = "bloomcalc"
version = "0.1.1"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "bloomcalc provides a calculator for bloom filters."
license = "Apache-2.0"

[dependencies]
getopts = "0.2"

arrrg = { path = "../arrrg", version = "0.2" }
arrrg_derive = { path = "../arrrg_derive", version = "0.2" }
