[package]
name = "bloomcalc"
version = "0.8.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "bloomcalc provides a calculator for bloom filters."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = ["command_line"]
command_line = ["dep:arrrg", "dep:arrrg_derive", "dep:getopts"]

[dependencies]
getopts = { workspace = true, optional = true }

arrrg = { workspace = true, optional = true }
arrrg_derive = { workspace = true, optional = true }

[[bin]]
name = "bloomcalc"
path = "src/bin/bloomcalc.rs"
required-features=["binaries"]
