[package]
name = "blueml"
version = "0.5.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "blueml provides the blue markup langauge."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[dependencies]
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.22.0"

[dev-dependencies]
proptest = "1.5"
