[package]
name = "buffertk"
version = "0.5.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "Buffertk provides tooling for serializing and deserializing data."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = []

[dependencies]

[[bin]]
name = "unvarint"
path = "src/bin/unvarint.rs"
required-features=["binaries"]

[[bin]]
name = "varint"
path = "src/bin/varint.rs"
required-features=["binaries"]
