[package]
name = "buffertk"
version = "0.7.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "Buffertk provides tooling for serializing and deserializing data."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = []

[dependencies]

[dev-dependencies]
arrrg = { path = "../arrrg", version = "0.3" }
guacamole = { path = "../guacamole", version = "0.7" }
statslicer = { path = "../statslicer", version = "0.3" }

[[bin]]
name = "unvarint"
path = "src/bin/unvarint.rs"
required-features=["binaries"]

[[bin]]
name = "varint"
path = "src/bin/varint.rs"
required-features=["binaries"]

[[bench]]
name = "varint"
harness = false
