[package]
name = "buffertk"
version = "0.16.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "Buffertk provides tooling for serializing and deserializing data."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = []

[dependencies]

[dev-dependencies]
arrrg = { workspace = true }
guacamole = { workspace = true }
statslicer = { workspace = true }

[[bin]]
name = "unvarint"
path = "src/bin/unvarint.rs"
required-features=["binaries"]

[[bin]]
name = "varint"
path = "src/bin/varint.rs"
required-features=["binaries"]

[[bench]]
name = "varint"
harness = false
