[package]
name = "busybee"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "BusyBee provides synchronous/thread-pool implementations of rpc_pb."
license = "Apache-2.0"

[dependencies]
boring = "2.1.0"
clap = "2.33"

biometrics = { path = "../biometrics", version = "0.1.1" }
buffertk = { path = "../buffertk", version = "0.2" }
guacamole = { path = "../guacamole", version = "0.2.0" }
indicio = { path = "../indicio" }
one_two_eight = { path = "../one_two_eight" }
prototk = { path = "../prototk", version = "0.1.0" }
prototk_derive = { path = "../prototk_derive", version = "0.1.0" }
rivulet = { path = "../rivulet" }
rpc_pb = { path = "../rpc_pb" }
sync42 = { path = "../sync42" }
tatl = { path = "../tatl" }
utilz = { path = "../utilz", version = "0.1" }
zerror = { path = "../zerror", version = "0.1.0" }
zerror_core = { path = "../zerror_core", version = "0.2" }
