[package]
name = "busybee"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "BusyBee provides synchronous/thread-pool implementations of rpc_pb."
license = "Apache-2.0"

[dependencies]
boring = "2.1.0"
clap = "2.33"

biometrics = { path = "../biometrics", version = "0.3" }
buffertk = { path = "../buffertk", version = "0.3" }
guacamole = { path = "../guacamole", version = "0.2" }
indicio = { path = "../indicio", version = "0.1" }
one_two_eight = { path = "../one_two_eight", version = "0.1" }
prototk = { path = "../prototk", version = "0.2" }
prototk_derive = { path = "../prototk_derive", version = "0.2" }
rpc_pb = { path = "../rpc_pb", version = "0.1" }
split_channel = { path = "../split_channel", version = "0.1" }
sync42 = { path = "../sync42", version = "0.2" }
tatl = { path = "../tatl", version = "0.2" }
utilz = { path = "../utilz", version = "0.1" }
zerror = { path = "../zerror", version = "0.1" }
zerror_core = { path = "../zerror_core", version = "0.2" }
