[package]
name = "busyrpc"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "busyrpc provides synchronous/thread-pool implementations of rpc_pb."
license = "Apache-2.0"

[features]
default = ["binaries"]

binaries = ["command_line"]
command_line = ["dep:arrrg", "dep:arrrg_derive", "dep:getopts"]

[dependencies]
libc = "0.2"
boring = "2.1.0"
crc32c = "0.6"

biometrics = { path = "../biometrics", version = "0.4" }
buffertk = { path = "../buffertk", version = "0.5" }
indicio = { path = "../indicio", version = "0.1" }
one_two_eight = { path = "../one_two_eight", version = "0.3" }
prototk = { path = "../prototk", version = "0.4" }
prototk_derive = { path = "../prototk_derive", version = "0.5" }
rpc_pb = { path = "../rpc_pb", version = "0.3" }
sync42 = { path = "../sync42", version = "0.4" }
tatl = { path = "../tatl", version = "0.3" }
utilz = { path = "../utilz", version = "0.3" }
zerror = { path = "../zerror", version = "0.2" }
zerror_core = { path = "../zerror_core", version = "0.3" }

getopts = { version = "0.2", optional = true }
arrrg = { path = "../arrrg", version = "0.3", optional = true }
arrrg_derive = { path = "../arrrg_derive", version = "0.3", optional = true }
guacamole = { path = "../guacamole", version = "0.5", optional = true }

[[example]]
name = "busyrpc-benchmark-client"
path = "examples/busyrpc-benchmark-client.rs"
required-features=["binaries"]

[[example]]
name = "busyrpc-benchmark-server"
path = "examples/busyrpc-benchmark-server.rs"
required-features=["binaries"]
