[package]
name = "busyrpc"
version = "0.11.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "busyrpc provides synchronous/thread-pool implementations of rpc_pb."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = ["command_line"]
command_line = ["dep:arrrg", "dep:arrrg_derive", "dep:getopts"]

[dependencies]
libc = "0.2"
boring = "4.9.1"
crc32c = "0.6"

biometrics = { path = "../biometrics", version = "0.11" }
buffertk = { path = "../buffertk", version = "0.12" }
indicio = { path = "../indicio", version = "0.10" }
prototk = { path = "../prototk", version = "0.11" }
prototk_derive = { path = "../prototk_derive", version = "0.11" }
rpc_pb = { path = "../rpc_pb", version = "0.12" }
sync42 = { path = "../sync42", version = "0.14" }
tatl = { path = "../tatl", version = "0.11" }
utilz = { path = "../utilz", version = "0.6" }
zerror = { path = "../zerror", version = "0.7" }
zerror_core = { path = "../zerror_core", version = "0.11" }

getopts = { version = "0.2", optional = true }
arrrg = { path = "../arrrg", version = "0.7", optional = true }
arrrg_derive = { path = "../arrrg_derive", version = "0.7", optional = true }

[[example]]
name = "busyrpc-benchmark-client"
path = "examples/busyrpc-benchmark-client.rs"
required-features=["binaries"]

[[example]]
name = "busyrpc-benchmark-server"
path = "examples/busyrpc-benchmark-server.rs"
required-features=["binaries"]
