[package]
name = "busyrpc"
version = "0.14.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "busyrpc provides synchronous/thread-pool implementations of rpc_pb."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = ["command_line"]
command_line = ["dep:arrrg", "dep:arrrg_derive", "dep:getopts"]

[dependencies]
libc = { workspace = true }
boring = { workspace = true }
crc32c = { workspace = true }
getopts = { workspace = true, optional = true }

biometrics = { workspace = true }
buffertk = { workspace = true }
indicio = { workspace = true }
prototk = { workspace = true }
prototk_derive = { workspace = true }
rpc_pb = { workspace = true }
sync42 = { workspace = true }
tatl = { workspace = true }
utilz = { workspace = true }
zerror = { workspace = true }
zerror_core = { workspace = true }
arrrg = { workspace = true, optional = true }
arrrg_derive = { workspace = true, optional = true }

[[example]]
name = "busyrpc-benchmark-client"
path = "examples/busyrpc-benchmark-client.rs"
required-features=["binaries"]

[[example]]
name = "busyrpc-benchmark-server"
path = "examples/busyrpc-benchmark-server.rs"
required-features=["binaries"]
