[package]
name = "busyrpc_service_discovery"
version = "0.8.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "busyrpc_service_discovery provides service discovery for rpc_pb." 
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = ["command_line"]
command_line = ["dep:arrrg", "dep:arrrg_derive", "dep:getopts"]

[dependencies]
getopts = { workspace = true, optional = true }

arrrg = { workspace = true, optional = true }
arrrg_derive = { workspace = true, optional = true }
busyrpc = { workspace = true }
indicio = { workspace = true }
minimal_signals = { workspace = true }
prototk = { workspace = true }
rpc_pb = { workspace = true }
tuple_key = { workspace = true }
tuple_routing = { workspace = true }
zerror_core = { workspace = true }

[[bin]]
name = "busyrpc-service-discovery-server"
path = "src/bin/busyrpc-service-discovery-server.rs"
required-features=["binaries"]

[[bin]]
name = "busyrpc-service-discovery-register"
path = "src/bin/busyrpc-service-discovery-register.rs"
required-features=["binaries"]

[[bin]]
name = "busyrpc-service-discovery-resolve"
path = "src/bin/busyrpc-service-discovery-resolve.rs"
required-features=["binaries"]

[[bin]]
name = "busyrpc-service-discovery-unregister"
path = "src/bin/busyrpc-service-discovery-unregister.rs"
required-features=["binaries"]
