[package]
name = "caternary"
version = "0.5.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "Caternary is a stack-based language and runtime."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = []

[dependencies]
handled = { workspace = true }
shvar = { workspace = true }

[[example]]
name = "m8_script"
path = "examples/m8_script.rs"
required-features = ["binaries"]

[[example]]
name = "m9_vc_generation"
path = "examples/m9_vc_generation.rs"
required-features = ["binaries"]

[[example]]
name = "m13_emission_parity"
path = "examples/m13_emission_parity.rs"
required-features = ["binaries"]
