[package]
name = "clue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biometrics = { path = "../biometrics" }
buffertk = { path = "../buffertk" }
id = { path = "../id" }
prototk = { path = "../prototk" }
util = { path = "../util" }
zerror = { path = "../zerror" }
